data/derived/fa15/progs/unify/prog2529.ml.out
Characters 109-110:
  ([(x1+x2+a1)/10],a @ [(x1+x2+a1) mod 10]) in 
                   ^
Error: This expression has type int * 'a
       but an expression was expected of type 'b list
